--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,8 @@ dependencies:
   colorfilter_generator: ^0.0.8
   flutter:
     sdk: flutter
-  image: ^4.0.15
+  focus_detector: ^2.0.1
+  image: ^4.0.17
     # photofilters:
   # git: https://github.com/svenopdehipt/photofilters.git
   rxdart: ^0.27.7
@@ -24,7 +25,7 @@ dev_dependencies:
   flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
-  pigeon: ^9.1.0
+  pigeon: ^10.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
