--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   colorfilter_generator: ^0.0.8
   flutter:
     sdk: flutter
-  focus_detector: ^2.0.1
+  focus_on_it: ^1.0.6
   image: ^4.0.17
     # photofilters:
   # git: https://github.com/svenopdehipt/photofilters.git
