--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -8,26 +8,26 @@ environment:
   flutter: ">=3.3.0"
 
 dependencies:
-  better_open_file: ^3.6.4
-  cross_file: ^0.3.3+6
+  better_open_file: ^3.6.5
+  cross_file: ^0.3.4
   flutter:
     sdk: flutter
   camerawesome:
     path: ../
-  path_provider: ^2.1.1
+  path_provider: ^2.1.2
   google_mlkit_face_detection: ^0.9.0
   google_mlkit_barcode_scanning: ^0.10.0
   google_mlkit_text_recognition: ^0.11.0
-  image: ^4.1.3
-  meta: ^1.10.0
+  image: ^4.1.7
+  meta: ^1.11.0
   rxdart: ^0.27.7
-  video_player: ^2.8.1
+  video_player: ^2.8.3
 
 dev_dependencies:
   exif: ^3.3.0
   flutter_test:
     sdk: flutter
-  patrol: ^1.1.0
+  patrol: ^3.5.2
   flutter_lints: ^3.0.1
 
 flutter:
