--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   cross_file: ^0.3.4+1
   flutter:
     sdk: flutter
+  focus_detector_v2: ^3.1.0+1
   image: ^4.1.7
   path_provider: ^2.1.2
   rxdart: ^0.27.7
