--- a/android/build.gradle
+++ b/android/build.gradle
@@ -70,9 +70,7 @@ def isVersionInRange(version, min, max) {
     def tabMin = min == null ? null : min.toString().split("\\.")
     def tabMax = max == null ? null : max.toString().split("\\.")
 
-    return isWithinRange(getMajor(tabVersion), getMajor(tabMin), getMajor(tabMax))
-            && isWithinRange(getMinor(tabVersion), getMinor(tabMin), getMinor(tabMax))
-            && isWithinRange(getPatch(tabVersion), getPatch(tabMin), getPatch(tabMax))
+    return isWithinRange(getMajor(tabVersion), getMajor(tabMin), getMajor(tabMax)) && isWithinRange(getMinor(tabVersion), getMinor(tabMin), getMinor(tabMax)) && isWithinRange(getPatch(tabVersion), getPatch(tabMin), getPatch(tabMax))
 }
 
 def compatibleVersion(prop, fallbackVersion, min = null, max = null) {
@@ -124,9 +122,9 @@ android {
 }
 
 dependencies {
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.4'
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.8'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0'
     implementation 'androidx.test:rules:1.5.0'
     // implementation project(path: ':integration_test')
     def compatPlayServicesLocationVersion = compatibleVersion('playServicesLocationVersion', DEFAULT_PLAY_SERVICES_LOCATION_VERSION)
@@ -136,11 +134,11 @@ dependencies {
 
     testImplementation 'junit:junit:4.13.2'
     // Optional -- Mockito framework
-    testImplementation "org.mockito:mockito-core:4.8.0"
+    testImplementation "org.mockito:mockito-core:5.11.0"
     // Optional -- mockito-kotlin
-    testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:5.2.7"
 
-    def camerax_version = "1.3.0"
+    def camerax_version = "1.3.2"
     implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
@@ -151,6 +149,6 @@ dependencies {
     def compatMediaVersion = compatibleVersion('compatMediaVersion', DEFAULT_MEDIA_VERSION)
     implementation "androidx.media:media:${compatMediaVersion}"
 
-    implementation 'com.google.guava:guava:31.0.1-android'
+    implementation 'com.google.guava:guava:33.0.0-android'
 
 }
