--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,24 +9,24 @@ repository: https://github.com/Apparence-io/camera_awesome
 
 environment:
   sdk: ">=3.1.0 <4.0.0"
-  flutter: ">=1.10.0"
+  flutter: ">=3.24.0"
 
 dependencies:
   carousel_slider: ^4.2.1
   collection: ^1.18.0
   colorfilter_generator: ^0.0.8
-  cross_file: ^0.3.4+1
+  cross_file: ^0.3.4
   flutter:
     sdk: flutter
   focus_detector_v2: ^3.1.0+1
-  image: ^4.1.7
-  path_provider: ^2.1.3
-  rxdart: ^0.27.7
+  image: ^4.2.0
+  path_provider: ^2.1.4
+  rxdart: ^0.28.0
 dev_dependencies:
-  flutter_lints: ^3.0.2
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
-  pigeon: ^18.0.0
+  pigeon: ^21.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
