--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,21 +12,22 @@ environment:
   flutter: ">=3.24.0"
 
 dependencies:
-  carousel_slider: ^4.2.1
+  carousel_slider: ^5.0.0
   collection: ^1.18.0
   colorfilter_generator: ^0.0.8
-  cross_file: ^0.3.4
+  cross_file: ^0.3.4+2
   flutter:
     sdk: flutter
   focus_detector_v2: ^3.1.0+1
   image: ^4.2.0
   path_provider: ^2.1.4
   rxdart: ^0.28.0
+
 dev_dependencies:
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
-  pigeon: ^21.1.0
+  pigeon: ^22.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
